# py-golf-games

./: .commitlint.config.mjs  .cruft.json  .dockerignore  .envrc  .flake8  .gitignore  .konchrc  .pre-commit-config.yaml  .secrets.baseline  AUTHORS.rst  Dockerfile  HISTORY.rst  Justfile  MANIFEST.in  Makefile  README.md  README.rst  commitlint.config.js  docker-entrypoint.sh  entrypoint.sh  pyproject.toml  requirements-tox.txt  requirements.txt  setup.cfg  setup.py  simulate.sh  tox.ini
.github/: dependabot.yaml  dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: auto-approve-merge-dependabot.yml  ci.yml  codeql-analysis.yml  commitlint.yml  dependabot-uv.yml  docs.yml  hadolint.yml  pr-labeler.yml  publish.yml  release-drafter.yml
docs/: Makefile  conf.py  index.rst  make.bat
golf/: player.py  round.py
golf_game/: course.py  game_engine.py  hole.py  player.py  round.py  scorecard.py  simulation.py  simulation_generator.py
golf_game/games/: game_engine.py  sandie.py  stroke.py
golf_game/simulation/: generator.py  simulator.py
latest/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/_modules/: index.html
latest/_modules/py_golf_games/: course.html  hole.html  player.html  round.html  scorecard.html  tee.html
latest/_modules/py_golf_games/games/: game.html  game_engine.html  sandie.html  stroke.html
latest/_modules/py_golf_games/simulation/: generator.html  simulator.html
latest/_sources/sources/: modules.rst.txt  py_golf_games.games.rst.txt  py_golf_games.rst.txt  py_golf_games.simulation.rst.txt
latest/getting_started/: getting_started.html
latest/roadmap/: roadmap.html
latest/sources/: modules.html  py_golf_games.games.html  py_golf_games.html  py_golf_games.simulation.html
latest/todo/: todo.html
latest/usage/: usage.html
py_golf/: __init__.py  course.py  hole.py  player.py  round.py  scorecard.py  tee.py
py_golf/games/: game.py
py_golf/simulation/: generator.py  simulator.py
py_golf_games/: __init__.py  course.py  hole.py  player.py  round.py  scorecard.py  tee.py
py_golf_games/games/: game.py  game_engine.py  sandie.py  stroke.py
py_golf_games/simulation/: generator.py  simulator.py
