# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme>=22.8.0"]
build-backend = "hatchling.build"

[project]
name = "py-golf-games"
version = "0.0.0"
description = "Simulation of golf games"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Ryan", email = "ryankanno@localkinegrinds.com"}]
maintainers = [{name = "Ryan", email = "ryankanno@localkinegrinds.com"}]
dependencies = [
    "structlog==24.4.0 ; python_full_version >= '3.10' and python_full_version < '4'",
]

[project.urls]
Repository = "https://github.com/ryankanno/py-golf-games"
Issues = "https://github.com/ryankanno/py-golf-games/issues"

[tool.uv]
dev-dependencies = [
    "alabaster==1.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "asttokens==2.4.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "attrs==24.2.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "babel==2.16.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "black==24.8.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "cachetools==5.5.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "certifi==2024.8.30 ; python_full_version >= '3.10' and python_full_version < '4'",
    "cfgv==3.4.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "chardet==5.2.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "charset-normalizer==3.3.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "click==8.1.7 ; python_full_version >= '3.10' and python_full_version < '4'",
    "colorama==0.4.6 ; python_full_version >= '3.10' and python_full_version < '4'",
    "coverage[toml]==7.6.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "decorator==5.1.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "distlib==0.3.8 ; python_full_version >= '3.10' and python_full_version < '4'",
    "docutils==0.21.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "dunamai==1.22.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "exceptiongroup==1.2.2 ; python_full_version == '3.10.*'",
    "execnet==2.1.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "executing==2.1.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "fancycompleter==0.9.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "filelock==3.16.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "glob2==0.7 ; python_full_version >= '3.10' and python_full_version < '4'",
    "hypothesis==6.112.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "identify==2.6.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "idna==3.9 ; python_full_version >= '3.10' and python_full_version < '4'",
    "imagesize==1.4.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "iniconfig==2.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "ipython==8.27.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "isort==5.13.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "jedi==0.19.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "jinja2==3.1.4 ; python_full_version >= '3.10' and python_full_version < '4'",
    "junit-xml==1.9 ; python_full_version >= '3.10' and python_full_version < '4'",
    "konch==4.5.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "markupsafe==2.1.5 ; python_full_version >= '3.10' and python_full_version < '4'",
    "matplotlib-inline==0.1.7 ; python_full_version >= '3.10' and python_full_version < '4'",
    "mutmut==2.5.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "mypy-extensions==1.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "mypy==1.11.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "nodeenv==1.9.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "packaging==24.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "parso==0.8.4 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pathspec==0.12.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pdbpp==0.10.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pexpect==4.9.0 ; python_full_version >= '3.10' and python_full_version < '4' and sys_platform != 'emscripten' and sys_platform != 'win32'",
    "platformdirs==4.3.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pluggy==1.5.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pony==0.7.19 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pre-commit==3.8.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "prompt-toolkit==3.0.47 ; python_full_version >= '3.10' and python_full_version < '4'",
    "ptyprocess==0.7.0 ; python_full_version >= '3.10' and python_full_version < '4' and sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pure-eval==0.2.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pygments==2.18.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pyproject-api==1.7.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pyreadline==2.1 ; python_full_version >= '3.10' and python_full_version < '4' and platform_system == 'Windows'",
    "pyrepl==0.9.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pytest-cov==5.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pytest-mock==3.14.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pytest-randomly==3.15.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pytest-xdist==3.6.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pytest==8.3.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pyyaml==6.0.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "requests==2.32.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "ruff==0.6.5 ; python_full_version >= '3.10' and python_full_version < '4'",
    "six==1.16.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "snowballstemmer==2.2.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "sortedcontainers==2.4.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "sphinx==8.0.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "sphinxcontrib-applehelp==2.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "sphinxcontrib-devhelp==2.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "sphinxcontrib-htmlhelp==2.1.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "sphinxcontrib-jsmath==1.0.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "sphinxcontrib-qthelp==2.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "sphinxcontrib-serializinghtml==2.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "stack-data==0.6.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "toml==0.10.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "tomli==2.0.1 ; python_full_version >= '3.10' and python_full_version <= '3.11'",
    "tox==4.18.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "traitlets==5.14.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "urllib3==2.2.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "virtualenv==20.26.4 ; python_full_version >= '3.10' and python_full_version < '4'",
    "wcwidth==0.2.13 ; python_full_version >= '3.10' and python_full_version < '4'",
    "wmctrl==0.5 ; python_full_version >= '3.10' and python_full_version < '4'",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = false
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.black]
line-length = 79
skip-string-normalization = true
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
/(
\.direnv
| \.eggs
| \.git
| \.hg
| \.mypy_cache
| \.nox
| \.tox
| \.venv
| venv
| \.svn
| _build
| buck-out
| build
| dist
| __pypackages__
| \{\{cookiecutter\.package_name\}\}\/tests
)/
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -n auto"

[tool.coverage.run]
parallel = true
branch = true
source = ["py_golf_games"]
omit = [
    "*/python?.?/*",
    "*/tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "import",
]
show_missing = true
skip_covered = false

[tool.isort]
force_grid_wrap = 0
force_single_line = true
include_trailing_comma = true
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true
known_third_party = []
default_section = "THIRDPARTY"
known_first_party = "py_golf_games"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.vulture]
make_whitelist = true
min_confidence = 80
paths = ["py_golf_games", "tests"]

[tool.ruff]
line-length = 79

[tool.ruff.mccabe]
max-complexity = 12

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "C9",
    "E4",
    "E7",
    "E9",
    "F",
    "W",
    "G",
    "A",
    "PT",
    "B",
    "ANN",
    "SIM",
]
ignore = [
    "ANN101",
    "ANN102",
]
